--- a/style.css
+++ b/style.css
@@ -1,113 +1,176 @@
 body {
-    background-color: black;
-    color: white;
+  background-color: black;
+  color: white;
 }
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
 .Sec-A {
-    width: 30vw;
-    height: 800px;
+  width: 30vw;
+  height: 800px;
 }
 
-.Sec-B{
-    width: 68vw;
-    height: 800px;
-    margin-left: 10px;
-    position: relative;
+.Sec-B {
+  width: 68vw;
+  height: 510px;
+  margin-left: 10px;
+  position: relative;
 }
 
 .container {
-    display: flex;
-    padding: 5px;
+  display: flex;
+  padding: 5px;
 }
 
-.Sec-B>nav {
-    width: 100%;
-    height: 50px;
-    background-color: rgb(44, 40, 40);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.Sec-B > nav {
+  width: 100%;
+  height: 50px;
+  background-color: rgb(44, 40, 40);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.loginBtns{
-    display: flex;
-    width: 180px;
+.loginBtns {
+  display: flex;
+  width: 180px;
 }
 
-.loginBtns>button{
-    width: 65px;
-    height: 31px;
-    margin: 5px;
-    background-color: rgb(44, 40, 40);
-    color: white;
-    border: none;
-    font-size: 15px;
-    font-weight: bold;
+.loginBtns > button {
+  width: 65px;
+  height: 31px;
+  margin: 5px;
+  background-color: rgb(44, 40, 40);
+  color: white;
+  border: none;
+  font-size: 15px;
+  font-weight: bold;
 }
 
-.loginBtns>button:hover {
-    cursor: pointer;
-    color: black;
-    background-color: white;
-    border-radius: 35%;
+.loginBtns > button:hover {
+  cursor: pointer;
+  color: black;
+  background-color: white;
+  border-radius: 35%;
 }
 
 .angles {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
-.angles>img {
-    filter: invert();
-    
+.angles > img {
+  filter: invert();
 }
 
 /* styling Section-A */
 
 .homeSec {
-    background-color: rgb(44, 40, 40);
-    height: 110px;
-    border-radius: 10px;
-    padding: 15px;
+  background-color: rgb(44, 40, 40);
+  height: 110px;
+  border-radius: 10px;
+  padding: 15px;
 }
 
-.homeSec>li {
-    display: flex;
-    margin: 13px;
-    align-items: center;
-
+.homeSec > li {
+  display: flex;
+  margin: 13px;
+  align-items: center;
 }
 .logo {
-    display: flex;
-    filter: invert(1);
-    align-items: center;
+  display: flex;
+  filter: invert(1);
+  align-items: center;
 }
-.logo>img {
-    height: 30px;
-}
-
-.logo>h1{
-    filter: invert();
-    margin-left: 5px;
-}
-.homeSec>li>img {
-    filter: invert();
-    height: 14px;
-    width: 14px;
-    margin: 3px;
+.logo > img {
+  height: 30px;
 }
 
-.homeSec>li>h4 {
-    margin-left: 8px;
+.logo > h1 {
+  filter: invert();
+  margin-left: 5px;
+}
+.homeSec > li > img {
+  filter: invert();
+  height: 14px;
+  width: 14px;
+  margin: 3px;
 }
 
-.homeSec>li>h4:hover {
-    cursor: pointer;
+.homeSec > li > h4 {
+  margin-left: 8px;
 }
 
-.homeSec>li>img:hover {
-    cursor: pointer;
+.homeSec > li > h4:hover {
+  cursor: pointer;
+}
+
+.homeSec > li > img:hover {
+  cursor: pointer;
+}
+
+/* cards - section */
+
+.cardSection {
+  width: 65vw;
+  height: 90vh;
+  background-color: rgb(16, 16, 16);
+  margin: 8px 0;
+  overflow: auto;
+  padding: 20px;
+  position: relative;
+}
+
+#playlist {
+  height: 60px;
+  align-content: center;
+  font-size: 36px;
+}
+
+.card {
+  width: 200px;
+  background-color: rgb(44, 40, 40);
+  height: 250px;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px;
+}
+
+card > h1 {
+  font-weight: bolder;
+  font-size: 25px;
+}
+
+.card > h4 {
+  font-size: medium;
+}
+
+.cardList {
+  width: 63vw;
+  display: flex;
+  flex-wrap: wrap;
+  position: absolute;
+  overflow: hidden;
+}
+
+/* ScrollBar */
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #484343;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #141212;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
