--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 .Sec-B > nav {
   width: 100%;
   height: 50px;
-  background-color: rgb(44, 40, 40);
+  background-color: rgb(22, 21, 21);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -42,7 +42,7 @@ body {
   width: 65px;
   height: 31px;
   margin: 5px;
-  background-color: rgb(44, 40, 40);
+  background-color: rgb(21, 21, 21);
   color: white;
   border: none;
   font-size: 15px;
@@ -67,7 +67,7 @@ body {
 /* styling Section-A */
 
 .homeSec {
-  background-color: rgb(44, 40, 40);
+  background-color: rgb(22, 21, 21);
   height: 110px;
   border-radius: 10px;
   padding: 15px;
@@ -102,6 +102,10 @@ body {
   margin-left: 8px;
 }
 
+.invert {
+  filter: invert();
+}
+
 .homeSec > li > h4:hover {
   cursor: pointer;
 }
@@ -130,7 +134,7 @@ body {
 
 .card {
   width: 200px;
-  background-color: rgb(44, 40, 40);
+  background-color: rgb(37, 36, 36);
   height: 250px;
   border-radius: 10px;
   padding: 10px;
@@ -150,7 +154,7 @@ card > h1 {
   width: 63vw;
   display: flex;
   flex-wrap: wrap;
-  position: absolute;
+  position: relative;
   overflow: hidden;
 }
 
@@ -173,4 +177,54 @@ card > h1 {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+
+.seekBar {
+  width: 67%;
+  height: 40px;
+  background-color: #dcd9d9;
+  bottom: 0;
+  display: flex;
+  position: absolute;
+  justify-content: space-between;
+  padding: 6px;
+  border-radius: 10px;
+  align-items: center;
+  position: fixed;
+  color: black;
+}
+
+.songBtns > img {
+  margin: 0 3px;
+  cursor: pointer;
+}
+
+/* song list */
+
+.songList > li {
+  list-style: decimal;
+  display: flex;
+  color: white;
+  justify-content: space-between;
+  height: 70px;
+  align-items: center;
+  width: 95%;
+  border: 2px solid white;
+  border-radius: 10px;
+  margin: 6px;
+  cursor: pointer;
+}
+
+.songList {
+  height: 544px;
+  width: 96%;
+  margin: 12px 2px;
+  background-color: rgb(21, 21, 21);
+  padding: 6px;
+  border-radius: 10px;
+  overflow: auto;
+}
+
+.m-10 {
+  margin: 10px;
 }
