--- a/style.css
+++ b/style.css
@@ -135,10 +135,11 @@ body {
 .card {
   width: 200px;
   background-color: rgb(37, 36, 36);
-  height: 250px;
+  height: 258px;
   border-radius: 10px;
   padding: 10px;
   margin: 10px;
+  cursor: pointer;
 }
 
 card > h1 {
@@ -181,7 +182,7 @@ card > h1 {
 
 .audioTrack {
   width: 67%;
-  height: 40px;
+  height: 70px;
   background-color: #dcd9d9;
   bottom: 0;
   display: flex;
@@ -216,17 +217,19 @@ card > h1 {
 }
 
 .songName {
+  display: flex;
+  justify-content: center;
   width: 120px;
   height: 40px;
   overflow: hidden;
-  align-content: center;
 }
 
 .time {
-  width: 80px;
-  height: 40px;
-  overflow: auto;
-  align-content: center;
+  display: flex;
+    justify-content: center;
+    width: 100px;
+    height: 40px;
+    overflow: auto;
 }
 
 .songList {
@@ -239,11 +242,39 @@ card > h1 {
   overflow: auto;
 }
 
+.songBtns {
+  height: 40px;
+}
+
 .m-10 {
   margin: 10px;
 }
 
-.seekBar {
-  width: 100%;
-  height: 200px;
+#seekBar {
+  width: 98%;
+  height: 4px;
+  background: black;
+  position: fixed;
+  bottom: 10px;
+  position: absolute;
+  cursor: pointer;
+}
+
+.circle {
+  width: 13px;
+  height: 13px;
+  border-radius: 13px;
+  background-color: rgb(0, 0, 0);
+  position: relative;
+  bottom: 5px;
+  left: 0%;
+  transition: left 0.5s;
+}
+
+.songTrack {
+  display: flex;
+  position: absolute;
+  justify-content: space-between;
+  align-items: center;
+  width: 99%;
 }
