--- a/style.css
+++ b/style.css
@@ -8,20 +8,20 @@ body {
 }
 
 .Sec-A {
-  width: 30vw;
+  width: 35%;
   height: 800px;
 }
 
 .Sec-B {
-  width: 68vw;
+  width: 80%;
   height: 510px;
-  margin-left: 10px;
+  margin-left: 1%;
   position: relative;
 }
 
 .container {
   display: flex;
-  padding: 5px;
+  width: 100%;
 }
 
 .Sec-B > nav {
@@ -140,14 +140,17 @@ body {
   padding: 10px;
   margin: 10px;
   cursor: pointer;
+  display: flex;
+  flex-flow: column;
+  gap: 4px;
 }
 
-card > h1 {
+.title {
   font-weight: bolder;
   font-size: 25px;
 }
 
-.card > h4 {
+.desc {
   font-size: medium;
 }
 
@@ -227,10 +230,10 @@ card > h1 {
 
 .time {
   display: flex;
-    justify-content: center;
-    width: 100px;
-    height: 40px;
-    overflow: auto;
+  justify-content: center;
+  width: 100px;
+  height: 40px;
+  overflow: auto;
 }
 
 .songList {
@@ -280,7 +283,6 @@ card > h1 {
   width: 99%;
 }
 
-
 .footer {
   display: flex;
   font-size: 10px;
@@ -289,7 +291,6 @@ card > h1 {
   position: absolute;
   bottom: 0;
   padding: 10px 0;
-
 }
 
 .footer a {
@@ -309,7 +310,7 @@ card > h1 {
   flex-flow: column;
   gap: 7px;
 }
-.object>a {
+.object > a {
   margin: 5px;
   text-decoration: none;
   font-weight: bold;
@@ -317,8 +318,11 @@ card > h1 {
   display: flex;
   align-items: flex-start;
 }
+.object {
+  margin: 10;
+}
 
-.socialMedia>div {
+.socialMedia > div {
   margin: 10px 10px;
 }
 
@@ -326,7 +330,198 @@ card > h1 {
   margin: 3px;
 }
 
+.card > img {
+  width: 200px;
+  height: 200px;
+}
 
 .song {
   display: none;
+}
+
+.burger {
+  display: none;
+}
+/* Css for Phone  */
+
+@media (max-width: 768px) {
+  .Sec-A {
+    top: 4%;
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    max-width: 55%;
+    left: -55%;
+    background-color: black;
+    font-size: 0.9rem;
+    transition: .3s ease;
+  }
+
+  .Sec-A.active {
+    left: 0;
+  }
+
+  .container {
+    width: 80%;
+  }
+
+  /* From Uiverse.io by JaydipPrajapati1910 */
+  .burger {
+    position: relative;
+    width: 20px;
+    height: 20px;
+    background: transparent;
+    cursor: pointer;
+    display: block;
+  }
+
+  .burger input {
+    display: none;
+  }
+
+  .burger span {
+    display: block;
+    position: absolute;
+    height: 2px;
+    width: 90%;
+    background: white;
+    border-radius: 9px;
+    opacity: 1;
+    left: 0;
+    transform: rotate(0deg);
+    transition: 0.25s ease-in-out;
+  }
+
+  .burger span:nth-of-type(1) {
+    top: 0px;
+    transform-origin: left center;
+  }
+
+  .burger span:nth-of-type(2) {
+    top: 50%;
+    transform: translateY(-50%);
+    transform-origin: left center;
+  }
+
+  .burger span:nth-of-type(3) {
+    top: 100%;
+    transform-origin: left center;
+    transform: translateY(-50%);
+  }
+
+  .burger input:checked ~ span:nth-of-type(1) {
+    top: 0;
+    left: 5px;
+    transform: rotate(405deg);
+  }
+
+  .burger input:checked ~ span:nth-of-type(2) {
+    width: 0%;
+    opacity: 0;
+  }
+
+  .burger input:checked ~ span:nth-of-type(3) {
+    top: 28px;
+    left: 5px;
+    transform: rotate(-405deg);
+  }
+
+  .angles > .left,
+  .angles > .right {
+    display: none;
+  }
+
+  .Sec-B {
+    width: 100%;
+  }
+  .cardSection {
+    width: 100%;
+    height: auto;
+  }
+
+  .cardList {
+    width: 100%;
+    min-height: 450px;
+  }
+
+  .card {
+    width: 100px;
+    height: 140px;
+    margin: 4px;
+  }
+
+  .card > img {
+    width: 100px;
+    height: 100px;
+  }
+
+  .Sec-B > nav {
+    position: relative;
+    height: 30px;
+    width: 105%;
+  }
+
+  .last {
+    width: 100%;
+    flex-wrap: wrap;
+    gap: 16px;
+  }
+  .object {
+    margin: 0;
+  }
+
+  .title {
+    font-size: 12px;
+  }
+  .desc {
+    font-size: 8px;
+  }
+
+  .loginBtns {
+    width: 120px;
+  }
+  .loginBtns > button {
+    width: 45px;
+    height: 15px;
+    font-size: 12px;
+  }
+
+  #playlist {
+    height: 45px;
+    font-size: 1.8rem;
+  }
+  .songName {
+    width: 95px;
+    height: 30px;
+  }
+
+  .songBtns {
+    height: 30px;
+  }
+
+  .songBtns > img {
+    margin: 0.2px;
+  }
+
+  .audioTrack {
+    width: 93%;
+  }
+
+  .songList> li {
+    height: 45px;
+    width: 90%;
+    margin: 4px;
+  }
+
+  .name {
+    font-size: 11px;
+  }
+
+  #seekBar {
+    width: 96%;
+    height: 2px;
+    bottom: 15px;
+  }
+
+  /* hamburger functionality */
 }
